force-app/main/default/objects/AnswerVariant__mdt/AnswerVariant__mdt.object-meta.xml
<CustomObject>
    <description>Вариант ответа на вопрос.</description>
    <label>AnswerVariant</label>
    <pluralLabel>AnswerVariants</pluralLabel>
</CustomObject>