force-app/main/default/objects/AnswerVariant__mdt/fields/AnswerOrder__c.field-meta.xml
<CustomField>
    <fullName>AnswerOrder__c</fullName>
    <description>Порядковый номер варианта ответа в списке вариантов</description>
    <label>AnswerOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>