force-app/main/default/objects/AnswerVariant__mdt/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <description>Текст варианта ответа</description>
    <label>AnswerText</label>
    <length>64</length>
    <type>Text</type>
</CustomField>