force-app/main/default/objects/AnswerVariant__mdt/fields/AnswerText_RU__c.field-meta.xml
<CustomField>
    <fullName>AnswerText_RU__c</fullName>
    <description>Русский вариант ответа</description>
    <label>AnswerText_RU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>