force-app/main/default/objects/AnswerVariant__mdt/fields/NextQuestion__c.field-meta.xml
<CustomField>
    <fullName>NextQuestion__c</fullName>
    <description>Следующий вопрос, после выбранного варианта ответа.</description>
    <label>NextQuestion</label>
    <referenceTo>Question__mdt</referenceTo>
    <relationshipLabel>AnswerVariants (NextQuestion)</relationshipLabel>
    <relationshipName>AnswerVariants1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>