force-app/main/default/objects/AnswerVariant__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__mdt</referenceTo>
    <relationshipLabel>AnswerVariants</relationshipLabel>
    <relationshipName>AnswerVariants</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>